# BeamMP-Protocol

./: CMakeLists.txt  README.md
include/: ClientInfo.h  ClientPacket.h  ClientState.h  ClientTransport.h  Compression.h  Hash.h  Identification.h  ImplementationInfo.h  ModRequest.h  ModResponse.h  Packet.h  ProtocolVersion.h  ServerInfo.h  State.h  Transport.h  Util.h  Version.h
src/: ClientInfo.cpp  ClientPacket.cpp  ClientTransport.cpp  Compression.cpp  Hash.cpp  Identification.cpp  ImplementationInfo.cpp  ModRequest.cpp  ModResponse.cpp  Packet.cpp  ProtocolVersion.cpp  ServerInfo.cpp  Transport.cpp  Version.cpp
